feat(1.0.1): 优化代码警告